[package]
name = "chalice"
version = "0.1.0"
authors = ["sidhion"]

[lib]
name = "chalice"
path = "src/lib.rs"

[dependencies]
rand = "^0.3"
sha2 = "0.7.1"
hmac = "0.6.2"
ripemd160 = "0.7.0"
byteorder = "1.2.3"
hex = "0.3.2"
ring = "0.13.2"
itertools = "0.7.8"

[dependencies.secp256k1]
version = "0.9.2"
features = ["rand"]